--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "serve": "nodemon server"
+    "start": "node server"
   },
   "keywords": [],
   "author": "volandfrederic",
